fix: re-align the subreddit sidebar to be in line with subreddit feed

--- a/src-webpack/src/common/content_first/RE_styles.css
+++ b/src-webpack/src/common/content_first/RE_styles.css
@@ -81,6 +81,10 @@ shreddit-app[routename='popular'] #right-sidebar-container,
 shreddit-app[routename='subreddit'] #right-sidebar-container {
 	margin-top: 2rem;
 }
+shreddit-app[routename='subreddit'] #right-sidebar-container faceplate-partial > aside {
+	margin-top: 1rem;
+	padding-top: 0;
+}
 shreddit-app[pagetype='custom_feed'] #right-sidebar-container {
 	margin-top: 3.5rem;
 }
